default/objects/success__Opportunity_Insight_History__c/success__Opportunity_Insight_History__c.object-meta.xml
<CustomObject>
    <description>When the Predict Snapshot is enabled, a record is generated that captures the current Prediction score for each open Opportunity. These records are generated based on the defined frequency and capture additional information such as the current Stage of the Opportunity.</description>
    <label>Opportunity Insight History</label>
    <nameField>
        <displayFormat>OIH-{0000}</displayFormat>
        <label>Opportunity Insight History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Insight Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>