default/objects/success__Opportunity_Insight_History__c/fields/success__Amount__c.field-meta.xml
<CustomField>
    <fullName>success__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>