default/objects/success__Opportunity_Insight_History__c/fields/success__Close_Date__c.field-meta.xml
<CustomField>
    <fullName>success__Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>