default/objects/success__Opportunity_Insight_History__c/fields/success__Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>success__Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>