default/objects/success__Opportunity_Insight_History__c/fields/success__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>success__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Insight Histories</relationshipLabel>
    <relationshipName>Opportunity_Insight_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>