default/objects/success__Opportunity_Insight_History__c/fields/success__Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>success__Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Insight_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>