default/objects/success__Opportunity_Insight_History__c/fields/success__Prediction_Raw_Score__c.field-meta.xml
<CustomField>
    <fullName>success__Prediction_Raw_Score__c</fullName>
    <label>Prediction Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>