default/objects/success__Opportunity_Insight_History__c/fields/success__Prediction_Score__c.field-meta.xml
<CustomField>
    <fullName>success__Prediction_Score__c</fullName>
    <label>Prediction</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>