default/objects/success__Opportunity_Insight_History__c/fields/success__Prediction_Text__c.field-meta.xml
<CustomField>
    <fullName>success__Prediction_Text__c</fullName>
    <formula>IF(success__Prediction_Score__c==1,$Label.success__insight_poor,
IF(success__Prediction_Score__c==2,$Label.success__insight_fair,
IF(success__Prediction_Score__c==3,$Label.success__insight_good,
IF(success__Prediction_Score__c==4,$Label.success__insight_excellent,&#39;&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prediction Text</label>
    <type>Text</type>
</CustomField>