default/objects/success__Opportunity_Insight_History__c/fields/success__Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Stage_Name__c</fullName>
    <formula>success__Winning_Way_Step__r.success__Stage_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Name</label>
    <type>Text</type>
</CustomField>