default/objects/success__Opportunity_Insight_History__c/fields/success__Winning_Way_Step__c.field-meta.xml
<CustomField>
    <fullName>success__Winning_Way_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winning Way Step</label>
    <referenceTo>success__Winning_Way_Step__c</referenceTo>
    <relationshipLabel>Opportunity Insight Histories</relationshipLabel>
    <relationshipName>Opportunity_Insight_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>